--- a/milestone1/competition.html
+++ b/milestone1/competition.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>meowu</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Competition</title>
+  </head>
+  <body>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="competition.html">Competition</a>
+      <a href="audience.html">Audience</a>
+    </nav>
+    <h3>
+      My competition is good at showing his portfolio,<br />
+      and he has a functional website with an about me.
+    </h3>
+    <h3>His color scheme is [MEH] and it looks blocky.</h3>
+    <h3>
+      I can make my website feel smoother, look better, <br />
+      and be more functional.
+    </h3>
+  </body>
 </html>
