--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -20,6 +20,10 @@
       <p>Most likely from my own collection of photos ive taken</p>
       <h4>Why should users care about the focus of the site?</h4>
       <p>Because I'm cool and it would be cool if they did.</p>
+      <h4>Why should a site be built for this?</h4>
+      <p>Becasue I have a class to do and I need to make this for it.</p>
+      <h4>What is the goal of this site?</h4>
+      <p>Being able to get a good grade in my class.</p>
     </main>
   </body>
   <footer>
